# pydantic-selector

./: Makefile  README.md  TODO.md  VIBE.md  setup.cfg  setup.py
.cursor/rules/: python.mdc  testing.mdc
preoccupied/pydantic/selector/: __init__.py  discriminator.py  registry.py  selector.py  semvermap.py  versioned.py
preoccupied/pydantic/versioned/: __init__.py  discriminator.py  registry.py  selector.py  semvermap.py  versioned.py
tests/: test_policies.py  test_semvermap.py  test_shapes.py  test_versioned.py
