[metadata]
name = preoccupied.pydantic.versioned
version = 0.1.0

description = Versioned model utilities built atop Pydantic 2.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/obriencj/pydantic-versioned

author = Christopher O'Brien
# O'Brien breaks a lot of tools.
author_email = obriencj@preoccupied.net

license = GNU General Public License v3
license_files =
    LICENSE

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed


[options]
packages = find_namespace:
install_requires =
    pydantic>=2,<3
    semver
python_requires = >=3.8
include_package_data = False
zip_safe = False


[options.packages.find]
where = .

[tox:tox]
envlist = py


[testenv]
basepython = python3
deps =
    pytest
commands = pytest {posargs:tests}


# The end.
